create introduction + banner

--- a/index.html
+++ b/index.html
@@ -76,16 +76,62 @@
                 </div>
             </div>
         </div>
+        <ul class="navbar-mobile" id="navbar-mobile">
+            <li class="navbar-item__mobile"><a href="#">Home</a></li>
+            <li class="navbar-item__mobile"><a href="#">Menu</a></li>
+            <li class="navbar-item__mobile"><a href="#">Blog</a></li>
+            <li class="navbar-item__mobile"><a href="#">Pages</a></li>
+            <li class="navbar-item__mobile"><a href="#">Contact</a></li>
+            <li class="navbar-item__mobile"><a href="#">Login</a></li>
+        </ul>
     </header>
 
-    <ul class="navbar-mobile" id="navbar-mobile">
-        <li class="navbar-item__mobile"><a href="#">Home</a></li>
-        <li class="navbar-item__mobile"><a href="#">Menu</a></li>
-        <li class="navbar-item__mobile"><a href="#">Blog</a></li>
-        <li class="navbar-item__mobile"><a href="#">Pages</a></li>
-        <li class="navbar-item__mobile"><a href="#">Contact</a></li>
-        <li class="navbar-item__mobile"><a href="#">Login</a></li>
-    </ul>
+    <main>
+        <!-- Section -->
+        <section class="introduction">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-7">
+                        <div class="introduction__content">
+                            <p class="introduction__content-intro">Hi, new friend!</p>
+                            <h1 class="introduction__content__title">We do not cook, we create your emotions!</h1>
+                            <p class="introduction__content__desc">There's evidence that cooking, like other creative practices, can boost well-being, self-esteem, and other measures of mental health.</p>
+                            <a href="" class="introduction__content__link">Our menu</a>
+                        </div>
+                    </div>
+                    <div class="col-md-12 col-lg-5">
+                        <div class="introduction__thumbnail">
+                            <div class="introduction__thumbnail-main">
+                                <a href="#" class="introduction__thumbnail__price">Price:$11</a>
+                                <img src="./assets/img/home/image89.png" alt="">
+                            </div>
+                            <div class="introduction__thumbnail-sub">
+                                <img src="./assets/img/home/image90.png" alt="">
+                                <img src="./assets/img/home/image77.png" alt="">
+                                <img src="./assets/img/home/image91.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Banner -->
+        <section class="banner">
+            <div class="banner__item">
+                <div class="banner__item-number">06</div>
+                <div class="banner__item-content">Number Restaurant</div>
+            </div>
+            <div class="banner__item">
+                <div class="banner__item-number">68</div>
+                <div class="banner__item-content">New Food Menu Dishes</div>
+            </div>
+            <div class="banner__item">
+                <div class="banner__item-number">36</div>
+                <div class="banner__item-content">Years of experience</div>
+            </div>
+        </section>
+    </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
