login + create html admin

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                     </svg>
                 </div>
                 <ul class="navbar">
-                    <li class="navbar-item"><a href="">Home</a></li>
-                    <li class="navbar-item"><a href="">Menu</a></li>
-                    <li class="navbar-item"><a href="">Blog</a></li>
-                    <li class="navbar-item"><a href="">Pages</a></li>
-                    <li class="navbar-item"><a href="">Contact</a></li>
+                    <li class="navbar-item"><a href="#home">Home</a></li>
+                    <li class="navbar-item"><a href="#menu">Menu</a></li>
+                    <li class="navbar-item"><a href="#blog">Blog</a></li>
+                    <li class="navbar-item"><a href="#pages">Pages</a></li>
+                    <li class="navbar-item"><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="logo">
                     <a href="index.html">
@@ -72,7 +72,7 @@
                     </a>
                 </div>
                 <div class="table-reservation">
-                    <a href="#" class="table-reservation__login">Login</a>
+                    <a href="login.html" class="table-reservation__login">Login</a>
                     <a href="#" class="table-reservation__reserve">Table
                         Reservation</a>
                 </div>
@@ -90,7 +90,7 @@
 
     <main>
         <!-- Section -->
-        <section class="introduction">
+        <section class="introduction" id="home">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-lg-7">
@@ -135,7 +135,7 @@
         </section>
 
         <!-- Popular -->
-        <section class="popular">
+        <section class="popular" id="pages">
             <div class="container overflow-hidden">
                 <div class="popular__heading">
                     <h2>Most popular food</h2>
@@ -338,7 +338,7 @@
         </section>
 
         <!-- Menu -->
-        <section class="menu">
+        <section class="menu" id="menu">
             <div class="container overflow-hidden">
                 <div class="menu__title">
                     <span>Our menu</span>
@@ -745,7 +745,7 @@
         </section>
 
         <!-- Blog -->
-        <section class="blog">
+        <section class="blog" id="blog">
             <div class="container overflow-hidden">
                 <div class="blog__title">
                     <p>Our blog</p>
@@ -819,7 +819,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer id="contact">
         <div class="container overflow-hidden">
             <div class="footer">
                 <div class="row gx-5 gy-5">
