--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
             </div>
         </div>
         <ul class="navbar-mobile" id="navbar-mobile">
-            <li class="navbar-item__mobile"><a href="#">Home</a></li>
-            <li class="navbar-item__mobile"><a href="#">Menu</a></li>
-            <li class="navbar-item__mobile"><a href="#">Blog</a></li>
-            <li class="navbar-item__mobile"><a href="#">Pages</a></li>
-            <li class="navbar-item__mobile"><a href="#">Contact</a></li>
-            <li class="navbar-item__mobile"><a href="#">Login</a></li>
+            <li class="navbar-item__mobile"><a href="#home">Home</a></li>
+            <li class="navbar-item__mobile"><a href="#menu">Menu</a></li>
+            <li class="navbar-item__mobile"><a href="#blog">Blog</a></li>
+            <li class="navbar-item__mobile"><a href="#pages">Pages</a></li>
+            <li class="navbar-item__mobile"><a href="#contact">Contact</a></li>
+            <li class="navbar-item__mobile"><a href="login.html">Login</a></li>
         </ul>
     </header>
 
