--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 </div>
                 <ul class="navbar">
                     <li class="navbar-item"><a href="#home">Home</a></li>
-                    <li class="navbar-item"><a href="#menu">Menu</a></li>
-                    <li class="navbar-item"><a href="#blog">Blog</a></li>
-                    <li class="navbar-item"><a href="#pages">Pages</a></li>
-                    <li class="navbar-item"><a href="#contact">Contact</a></li>
+                    <li class="navbar-item"><a href="menu.html">Menu</a></li>
+                    <li class="navbar-item"><a href="blog.html">Blog</a></li>
+                    <li class="navbar-item"><a href="page.html">Pages</a></li>
+                    <li class="navbar-item"><a href="contact.html">Contact</a></li>
                 </ul>
                 <div class="logo">
                     <a href="index.html">
@@ -81,7 +81,7 @@
         <ul class="navbar-mobile" id="navbar-mobile">
             <li class="navbar-item__mobile"><a href="#home">Home</a></li>
             <li class="navbar-item__mobile"><a href="#menu">Menu</a></li>
-            <li class="navbar-item__mobile"><a href="#blog">Blog</a></li>
+            <li class="navbar-item__mobile"><a href="blog.html">Blog</a></li>
             <li class="navbar-item__mobile"><a href="#pages">Pages</a></li>
             <li class="navbar-item__mobile"><a href="#contact">Contact</a></li>
             <li class="navbar-item__mobile"><a href="login.html">Login</a></li>
