--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-< lang="en">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -36,7 +36,7 @@
     <script src="./assets/js/Blog/blogPaging.js"></script>
 </head>
 
-<>
+<body>
         <!-- Header -->
         <header>
             <div class="container">
