--- a/page.html
+++ b/page.html
@@ -200,7 +200,7 @@
                     </div>
                     <div class="main-time-div">
                       <h2 class="seconds">12</h2>
-                      <p>Seconds</p>
+                      <p>Secondsss</p>
                     </div>
                   </div>
                   <div class="main-link">
