--- a/page.html
+++ b/page.html
@@ -358,7 +358,7 @@
                                 <div class=" main-time">
                                     <div class="main-time-div">
                                         <h2 class=" days">00</h2>
-                                        <p>Days</p>
+                                        <p>Daysss</p>
                                     </div>
                                     <div class="main-time-div">
                                         <h2 class="hours">00</h2>
@@ -397,4 +397,3 @@
     <script src="./assets/js/page.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
->>>>>>> 466304f0f9dac6ac54ef83f3ef6c2852e1c3340b
