--- a/blog.html
+++ b/blog.html
@@ -47,11 +47,11 @@
                         </svg>
                     </div>
                     <ul class="navbar">
-                        <li class="navbar-item"><a href="#home">Home</a></li>
-                        <li class="navbar-item"><a href="#menu">Menu</a></li>
-                        <li class="navbar-item"><a href="#blog">Blog</a></li>
-                        <li class="navbar-item"><a href="#pages">Pages</a></li>
-                        <li class="navbar-item"><a href="#contact">Contact</a></li>
+                        <li class="navbar-item"><a href="index.html">Home</a></li>
+                        <li class="navbar-item"><a href="menu.html">Menu</a></li>
+                        <li class="navbar-item"><a href="blog.html">Blog</a></li>
+                        <li class="navbar-item"><a href="page.html">Pages</a></li>
+                        <li class="navbar-item"><a href="contact.html">Contact</a></li>
                     </ul>
                     <div class="logo">
                         <a href="index.html">
@@ -68,12 +68,12 @@
                 </div>
             </div>
             <ul class="navbar-mobile" id="navbar-mobile">
-                <li class="navbar-item__mobile"><a href="#">Home</a></li>
-                <li class="navbar-item__mobile"><a href="#">Menu</a></li>
-                <li class="navbar-item__mobile"><a href="#">Blog</a></li>
-                <li class="navbar-item__mobile"><a href="#">Pages</a></li>
-                <li class="navbar-item__mobile"><a href="#">Contact</a></li>
-                <li class="navbar-item__mobile"><a href="#">Login</a></li>
+                <li class="navbar-item__mobile"><a href="index.html">Home</a></li>
+                <li class="navbar-item__mobile"><a href="menu.html">Menu</a></li>
+                <li class="navbar-item__mobile"><a href="blog.html">Blog</a></li>
+                <li class="navbar-item__mobile"><a href="page.html">Pages</a></li>
+                <li class="navbar-item__mobile"><a href="contact.html">Contact</a></li>
+                <li class="navbar-item__mobile"><a href="login.html">Login</a></li>
             </ul>
         </header>
 
