--- a/page.html
+++ b/page.html
@@ -71,7 +71,7 @@
           </div>
           <div class="table-reservation">
             <a href="login.html" class="table-reservation__login">Login</a>
-            <a href="#" class="table-reservation__reserve">Table Reservation</a>
+            <a href="shopping.html" class="table-reservation__reserve">Table Reservation</a>
           </div>
         </div>
       </div>
