--- a/cart.html
+++ b/cart.html
@@ -119,12 +119,12 @@
                         <div class="products-cart">
                           <div>
                             <ul class="header-card">
-                            <li class="col-3">Name</li>
-                            <li class="col-2">Image</li>
-                            <li class="col-2">Price</li>
-                            <li class="col-2">Quantily</li>
-                            <li class="col-2">Total</li>
-                            <li class="col-1">Delete</li>
+                            <li class="col-3 col-sm-3 col-md-3">Name</li>
+                            <li class="col-2 col-sm-2 col-md-2 text-center">Image</li>
+                            <li class="col-2 col-sm-2 col-md-2 text-center">Price</li>
+                            <li class="col-1 col-sm-1 col-md-2 text-center">Quantily</li>
+                            <li class="col-2 col-sm-2 col-md-2 text-center">Total</li>
+                            <li class="col-2 col-sm-2 col-md-1">Delete</li>
                             </ul>
                         </div>
                           <div class="products-cart-body" id ="products-cart-body"></div>
