--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="table-reservation">
                     <a href="login.html" class="table-reservation__login">Login</a>
-                    <a href="#" class="table-reservation__reserve">Table
+                    <a href="shopping.html" class="table-reservation__reserve">Table
                         Reservation</a>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                             <p class="introduction__content-intro">Hi, new friend!</p>
                             <h1 class="introduction__content__title">We do not cook, we create your emotions!</h1>
                             <p class="introduction__content__desc">There's evidence that cooking, like other creative practices, can boost well-being, self-esteem, and other measures of mental health.</p>
-                            <a href="" class="introduction__content__link">Our menu</a>
+                            <a href="#menu" class="introduction__content__link">Our menu</a>
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-5">
@@ -155,7 +155,7 @@
                                     </div>
                                     <p>Fresh toasted sourdough bread with olive oil and pomegranate.</p>
                                     <div class="order">
-                                        <a href="" class="order__link">
+                                        <a href="shopping.html" class="order__link">
                                             Order Now
                                         </a>
                                         <div class="order__star">
@@ -201,7 +201,7 @@
                                     </div>
                                     <p>Fresh toasted sourdough bread with olive oil and pomegranate.</p>
                                     <div class="order">
-                                        <a href="" class="order__link">
+                                        <a href="shopping.html" class="order__link">
                                             Order Now
                                         </a>
                                         <div class="order__star">
@@ -247,7 +247,7 @@
                                     </div>
                                     <p>Fresh toasted sourdough bread with olive oil and pomegranate.</p>
                                     <div class="order">
-                                        <a href="" class="order__link">
+                                        <a href="shopping.html" class="order__link">
                                             Order Now
                                         </a>
                                         <div class="order__star">
@@ -284,7 +284,7 @@
                     </div>
                 </div>
                 <div class="popular__linkAll">
-                    <a href="#">Explore All Food</a>
+                    <a href="shopping.html">Explore All Food</a>
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="11" viewBox="0 0 18 11" fill="none">
                         <path d="M1 5.5H17M17 5.5C15.4848 5.26 12.4545 4.024 12.4545 1M17 5.5C15.4848 5.74 12.4545 6.976 12.4545 10" stroke="#FB8F2C" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
@@ -530,7 +530,7 @@
                                     <h3>Reserve ! Book Now</h3>
                                 </div>
                                 <div class="reservation__content-book">
-                                    <a href="#">Book now</a>
+                                    <a href="shopping.html">Book now</a>
                                 </div>
                             </div>
                         </div>
@@ -768,7 +768,7 @@
                                         <span class="blog__content-user__comment">Comments 165</span>
                                         <span class="blog__content-user__views">View 1265</span>
                                     </div>
-                                    <div class=""><a href="#">Read Now</a></div>
+                                    <div class=""><a href="blog.html">Read Now</a></div>
                                 </div>
                             </div>
                         </div>
@@ -789,13 +789,13 @@
                                         <span class="blog__content-user__comment">Comments 165</span>
                                         <span class="blog__content-user__views">View 1265</span>
                                     </div>
-                                    <div class=""><a href="#">Read Now</a></div>
+                                    <div class=""><a href="blog.html">Read Now</a></div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="popular__linkAll">
-                        <a href="#">Explore All Blogs</a>
+                        <a href="blog.html">Explore All Blogs</a>
                         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="11" viewBox="0 0 18 11" fill="none">
                             <path d="M1 5.5H17M17 5.5C15.4848 5.26 12.4545 4.024 12.4545 1M17 5.5C15.4848 5.74 12.4545 6.976 12.4545 10" stroke="#FB8F2C" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
