--- a/page.html
+++ b/page.html
@@ -116,7 +116,7 @@
                                     </div> 
                                 </div>                   
                                 <div class="main-link">
-                                    <div id ="button"><button>Order</button></div>
+                                    <div id ="button"><button style="background-color: #FB8F2C"><a href="shopping.html">Order</a></button></div>
                                     <div><a href="index.html">Go to Home</a></div>
                                 </div>
                             </div>
