Fourth commit hover

--- a/menu.html
+++ b/menu.html
@@ -828,7 +828,7 @@
                 nextIcon
             ],
             dotsEach:true,
-            autoplay:false,
+            autoplay:true,
             autoplayTimeout:2000,
             responsive:{
                 0:{
