--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,25 @@
     <!-- Reset css -->
     <link rel="stylesheet" href="./assets/css/reset.css" />
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="./assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">    
+
     <!-- Link fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -129,22 +148,22 @@
 
             <div class="col-12 col-sm-12 col-md-5 col-lg-6">
               <div class="div-right">
-                  <form action="#">
+                  <form>
                     <div class="form_control">
                       <p>Your name *</p>
-                      <input class="name" type="text" />
+                      <input class="name" type="text " oninput="showSuccess(this)"/>
                       <small></small>
                       <span></span>
                     </div>
                     <div class="form_control">
                       <p>Email address *</p>
-                      <input class="email" type="email" />
+                      <input class="email" type="email" oninput="showSuccess(this)"/>
                       <small></small>
                       <span></span>
                     </div>
                     <div class="form-control-textarea">
                       <p>Write review *</p>
-                      <textarea></textarea>
+                      <textarea oninput="showSuccess(this)""></textarea>
                       <small></small>
                       <span></span>
                     </div>
