--- a/shopping.html
+++ b/shopping.html
@@ -127,7 +127,7 @@
               </button>
               </div>
               <div class="card-space d-flex">
-                <a href = "cart.html" target="_blank"><img src="./assets/img/shopping/shopping.png"></a>
+                <a href = "cart.html" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M0 24C0 10.7 10.7 0 24 0H69.5c22 0 41.5 12.8 50.6 32h411c26.3 0 45.5 25 38.6 50.4l-41 152.3c-8.5 31.4-37 53.3-69.5 53.3H170.7l5.4 28.5c2.2 11.3 12.1 19.5 23.6 19.5H488c13.3 0 24 10.7 24 24s-10.7 24-24 24H199.7c-34.6 0-64.3-24.6-70.7-58.5L77.4 54.5c-.7-3.8-4-6.5-7.9-6.5H24C10.7 48 0 37.3 0 24zM128 464a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm336-48a48 48 0 1 1 0 96 48 48 0 1 1 0-96z"/></svg></a>
                 <span id="quantity">0</span>
               </div>
 
@@ -157,21 +157,9 @@
           </div>
           <div class='col-6 col-sm-6 col-md-4 col-lg-3'>
             <div class='card'>
-              <img src='./assets/img/shopping/Breakfast Sandwiches (2).png' class='card-img-top' id ="2" alt='' type='Dinner'>
-                  <div class='card-body'>
-                      <h5 class='card-title'>Breakfast Sandwiches</h5>
-                      <div class='d-flex'>
-                          <p>$ <p class= 'card-text'>70</p></p>
-                          <button onclick='addToCart("2")' class='btn btn-primary'>Add to cart</button>
-                      </div>
-                  </div>
-            </div>
-          </div>
-          <div class='col-6 col-sm-6 col-md-4 col-lg-3'>
-            <div class='card'>
               <img src='./assets/img/shopping/Breakfast Sandwiches.jpg' class='card-img-top' id ="3" alt='' type='Stater'>
                   <div class='card-body'>
-                      <h5 class='card-title'>Breakfast Sandwiches</h5>
+                      <h5 class='card-title'>Breakfast Small Sandwiches</h5>
                       <div class='d-flex'>
                           <p>$<p class= 'card-text'>10</p></p>
                           <button onclick='addToCart("3")' class='btn btn-primary'>Add to cart</button>
@@ -183,7 +171,7 @@
             <div class='card'>
               <img src='./assets/img/shopping/Breakfast Sandwiches.png' class='card-img-top' id ="4" alt='' type='Breakfast'>
                   <div class='card-body'>
-                      <h5 class='card-title'>Breakfast Sandwiches</h5>
+                      <h5 class='card-title'>Breakfast Sandwiches And Eggs</h5>
                       <div class='d-flex'>
                           <p>$<p class= 'card-text'>24</p></p>
                           <button onclick='addToCart("4")' class='btn btn-primary'>Add to cart</button>
@@ -403,6 +391,18 @@
                       <div class='d-flex'>
                       <p>$<p class= 'card-text'>35</p> </p>
                           <button onclick='addToCart("22")' class='btn btn-primary'>Add to cart</button>
+                      </div>
+                  </div>
+            </div>
+          </div>
+          <div class='col-6 col-sm-6 col-md-4 col-lg-3'>
+            <div class='card'>
+              <img src='./assets/img/shopping/Breakfast Sandwiches (2).png' class='card-img-top' id ="2" alt='' type='Dinner'>
+                  <div class='card-body'>
+                      <h5 class='card-title'>Soup</h5>
+                      <div class='d-flex'>
+                          <p>$ <p class= 'card-text'>70</p></p>
+                          <button onclick='addToCart("2")' class='btn btn-primary'>Add to cart</button>
                       </div>
                   </div>
             </div>
