--- a/contact.html
+++ b/contact.html
@@ -208,10 +208,10 @@
                           <h5>Usefull Link</h5>
                           <ul>
                               <li><a href="index.html">Home</a></li>
-                              <li><a href="#pages">About Us</a></li>
-                              <li><a href="#blog">Services</a></li>
-                              <li><a href="#reservation">Booking</a></li>
-                              <li><a href="#menu">Menu</a></li>
+                              <li><a href="page.html">About Us</a></li>
+                              <li><a href="#">Services</a></li>
+                              <li><a href="shopping.html">Booking</a></li>
+                              <li><a href="menu.html">Menu</a></li>
                           </ul>
                       </div>
                   </div>
