--- a/menu.html
+++ b/menu.html
@@ -260,7 +260,7 @@
                         <h2>Food is not just<br> eating energy</h2>
                         <p>It's an experience.</p>
                         <div>
-                            <a href="#">Order Now</a>     
+                            <a href="shopping.html">Order Now</a>     
                         </div>
                     </div>
                 </div>
@@ -758,10 +758,10 @@
                             <h5>Usefull Link</h5>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="#pages">About Us</a></li>
-                                <li><a href="#blog">Services</a></li>
-                                <li><a href="#reservation">Booking</a></li>
-                                <li><a href="#menu">Menu</a></li>
+                                <li><a href="page.html">About Us</a></li>
+                                <li><a href="contact.html">Services</a></li>
+                                <li><a href="shopping.html">Booking</a></li>
+                                <li><a href="#">Menu</a></li>
                             </ul>
                         </div>
                     </div>
