--- a/page.html
+++ b/page.html
@@ -166,10 +166,10 @@
                             <h5>Usefull Link</h5>
                             <ul>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="#pages">About Us</a></li>
-                                <li><a href="#blog">Services</a></li>
-                                <li><a href="#reservation">Booking</a></li>
-                                <li><a href="#menu">Menu</a></li>
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="contact.html">Services</a></li>
+                                <li><a href="shopping.html">Booking</a></li>
+                                <li><a href="menu.html">Menu</a></li>
                             </ul>
                         </div>
                     </div>
