--- a/blog.html
+++ b/blog.html
@@ -1441,13 +1441,13 @@
                                     </ul>
 
                                     <ul class="page-number-list-container-sm" id="pageListSm">
-                                        <li class="page-number-link-sm active" value="1" id="page1" onclick="numberPage(1)">1</li>
-                                        <li class="page-number-link-sm" value="2" id="page2" onclick="numberPage(2)">2</li>
-                                        <li class="page-number-link-sm" value="3" id="page3" onclick="numberPage(3)">3</li>
-                                        <li class="page-number-link-sm" value="4" id="page4" onclick="numberPage(4)">4</li>
-                                        <li class="page-number-link-sm" value="5" id="page5" onclick="numberPage(5)">5</li>
-                                        <li class="page-number-link-sm" value="6" id="page6" onclick="numberPage(6)">6</li>
-                                        <li class="page-number-link-sm" value="6" id="page6" onclick="numberPage(7)">7</li>
+                                        <li class="page-number-link-sm page__sma1 active" value="1" id="page1" onclick="numberPage(1)" >1</li>
+                                        <li class="page-number-link-sm page__sma2" value="2" id="page2" onclick="numberPage(2)">2</li>
+                                        <li class="page-number-link-sm page__sma3" value="3" id="page3" onclick="numberPage(3)">3</li>
+                                        <li class="page-number-link-sm page__sma4" value="4" id="page4" onclick="numberPage(4)">4</li>
+                                        <li class="page-number-link-sm page__sma5" value="5" id="page5" onclick="numberPage(5)">5</li>
+                                        <li class="page-number-link-sm page__sma6" value="6" id="page6" onclick="numberPage(6)">6</li>
+                                        <li class="page-number-link-sm page__sma7" value="7" id="page7" onclick="numberPage(7)">7</li>
                                     </ul>
                                 </div>
                             </div>
