--- a/menu.html
+++ b/menu.html
@@ -190,7 +190,7 @@
                                         <div class="breakfast__img__desc-title">
                                             <h3>Ricotta Hotcakes</h3>
                                         </div>
-                                        <p>A savoury hotcake with maple bacon and rocket.</p>
+                                        <p>A savoury hotcake with maple bacon and rocket,let fire.</p>
                                         <div class="breakfast__img-order">
                                             <div class="breakfast__img-order-link">
                                                 <a href="#">Order now</a>
@@ -234,7 +234,7 @@
                                         <div class="breakfast__img__desc-title">
                                             <h3>Memphis Banana Bread</h3>
                                         </div>
-                                        <p>The ultimate banana bread with this 'rockstar' recipe.</p>
+                                        <p>The ultimate banana bread with this 'rockstar' recipe,feel hungry?</p>
                                         <div class="breakfast__img-order">
                                             <div class="breakfast__img-order-link">
                                                 <a href="#">Order now</a>
@@ -828,8 +828,9 @@
                 nextIcon
             ],
             dotsEach:true,
-            autoplay:true,
+            autoplay:false,
             autoplayTimeout:2000,
+            smartSpeed: 900,
             responsive:{
                 0:{
                     navText:[],
